Add LTE overlays for signal strength indicators.
Note that operators that wish to show "4G" instead of "LTE"
on these networks can set config_show4GForLTE to true.

Bug: 9265513
Bug: 9265217

PS2: Adapted for Alt Signal Layout

Change-Id: If7f3580da7266b0d0c62639e30684393d4e03392

--- a/packages/SystemUI/res/values/config.xml
+++ b/packages/SystemUI/res/values/config.xml
@@ -107,6 +107,6 @@
     <integer name="navigation_bar_transparency">255</integer>
 
     <!-- Should "4G" be shown instead of "LTE" when the network is NETWORK_TYPE_LTE? -->
-    <bool name="config_show4GForLTE">true</bool>
+    <bool name="config_show4GForLTE">false</bool>
 </resources>
 
