--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1238,10 +1238,6 @@
     <!-- True if the Sym key should open the InputMethodPicker (default) -->
     <bool name="config_symKeyShowsImePicker">true</bool>
 
-    <!-- Integer to configure panel auto brightness mode when changed -->
-    <integer name="config_panelAutoBrightnessValue">-1</integer>
-
-    <!-- True if the pie service should be started at system start. This is must be true
-         to support pie controls. -->
-    <bool name="config_allowPieService">true</bool>
+    <!-- True if the Irda service should be started at system start -->
+    <bool name="config_enableIrdaManagerService">false</bool>
 </resources>
