Recents RAM circle [1/2]
Adds an option to use a circular RAM meter surrounding the clear recents button.

Credit goes to @0xD34D from ChameleonOS.

Signed-off-by: Andros Rosa <andros2011@gmail.com>

--- a/packages/SystemUI/res/layout-land/status_bar_recent_panel.xml
+++ b/packages/SystemUI/res/layout-land/status_bar_recent_panel.xml
@@ -62,13 +62,28 @@
 
         </com.android.systemui.recent.RecentsHorizontalScrollView>
 
-        <Button android:id="@+id/recents_kill_all_button"
-            android:layout_gravity="bottom|right"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="@string/recents_kill_all_button_text"/>
+                <FrameLayout
+                     android:layout_width="50dp"
+                     android:layout_height="50dp"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginLeft="2dp"
+                    android:layout_gravity="bottom|left" >
+
+                    <com.android.systemui.recent.CircleMemoryMeter
+                        android:id="@+id/circle_meter_left"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+ 
+                    <Button
+                        android:id="@+id/recents_kill_all_button"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:padding="10dp"
+                        android:scaleType="fitCenter"
+                        android:text="@string/recents_kill_all_button_text"/>
+                </FrameLayout> 
 
     <view class="com.android.systemui.recent.LinearColorBar"
             android:id="@+id/ram_usage_bar"
