--- a/packages/SystemUI/res/layout/status_bar_recent_panel.xml
+++ b/packages/SystemUI/res/layout/status_bar_recent_panel.xml
@@ -57,6 +57,29 @@
 
         </com.android.systemui.recent.RecentsVerticalScrollView>
 
+                <FrameLayout
+                     android:layout_width="50dp"
+                     android:layout_height="50dp"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginLeft="2dp"
+                    android:layout_gravity="bottom|left" >
+
+                    <com.android.systemui.recent.CircleMemoryMeter
+                        android:id="@+id/circle_meter_left"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+ 
+                    <Button
+                        android:id="@+id/recents_kill_all_button"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:padding="10dp"
+                        android:scaleType="fitCenter"
+                        android:text="@string/recents_kill_all_button_text"/>
+                </FrameLayout>
+
     </FrameLayout>
 
     <include layout="@layout/status_bar_no_recent_apps"
