--- a/packages/SystemUI/res/layout-port/status_bar_recent_panel.xml
+++ b/packages/SystemUI/res/layout-port/status_bar_recent_panel.xml
@@ -68,13 +68,27 @@
 
         </com.android.systemui.recent.RecentsVerticalScrollView>
 
-    <Button android:id="@+id/recents_kill_all_button"
-            android:layout_gravity="bottom|left"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:text="@string/recents_kill_all_button_text"/>
+                <FrameLayout
+                     android:layout_width="50dp"
+                     android:layout_height="50dp"
+                    android:layout_marginBottom="2dp"
+                    android:layout_marginLeft="2dp"
+                    android:layout_gravity="bottom|left" >
+
+                    <com.android.systemui.recent.CircleMemoryMeter
+                        android:id="@+id/circle_meter"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent" />
+ 
+                    <ImageView
+                        android:id="@+id/recents_kill_all"
+                        android:clickable="true"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:padding="10dp"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/ic_recents_clear" />
+                </FrameLayout> 
 
     <view class="com.android.systemui.recent.LinearColorBar"
             android:id="@+id/ram_usage_bar"
