--- a/packages/SystemUI/res/layout/status_bar_recent_panel.xml
+++ b/packages/SystemUI/res/layout/status_bar_recent_panel.xml
@@ -26,58 +26,64 @@
     android:layout_width="match_parent"
     systemui:recentItemLayout="@layout/status_bar_recent_item"
     >
-    <FrameLayout
-        android:id="@+id/recents_bg_protect"
-        android:background="@drawable/status_bar_recents_background"
-        android:layout_width="match_parent"
+    <View
+        android:id="@+id/recents_transition_background"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true">
+        android:layout_width="match_parent"
+        android:visibility="invisible" />
 
-        <com.android.systemui.recent.RecentsVerticalScrollView
-            android:id="@+id/recents_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="0dp"
-            android:divider="@null"
-            android:stackFromBottom="true"
-            android:fadingEdge="vertical"
-            android:scrollbars="none"
-            android:fadingEdgeLength="@dimen/status_bar_recents_scroll_fading_edge_length"
-            android:layout_gravity="bottom|left"
-            android:clipToPadding="false"
-            android:clipChildren="false">
+	    <FrameLayout
+		android:id="@+id/recents_bg_protect"
+		android:background="@drawable/status_bar_recents_background"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_alignParentBottom="true">
 
-            <LinearLayout android:id="@+id/recents_linear_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:clipToPadding="false"
-                android:clipChildren="false">
-            </LinearLayout>
+		<com.android.systemui.recent.RecentsVerticalScrollView
+		    android:id="@+id/recents_container"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:layout_marginRight="0dp"
+		    android:divider="@null"
+		    android:stackFromBottom="true"
+		    android:fadingEdge="vertical"
+		    android:scrollbars="none"
+		    android:fadingEdgeLength="@dimen/status_bar_recents_scroll_fading_edge_length"
+		    android:layout_gravity="bottom|left"
+		    android:clipToPadding="false"
+		    android:clipChildren="false">
 
-        </com.android.systemui.recent.RecentsVerticalScrollView>
+		    <LinearLayout android:id="@+id/recents_linear_layout"
+		        android:layout_width="match_parent"
+		        android:layout_height="wrap_content"
+		        android:orientation="vertical"
+		        android:clipToPadding="false"
+		        android:clipChildren="false">
+		    </LinearLayout>
 
-                <FrameLayout
-                     android:layout_width="50dp"
-                     android:layout_height="50dp"
-                    android:layout_marginBottom="2dp"
-                    android:layout_marginLeft="2dp"
-                    android:layout_gravity="bottom|left" >
+		</com.android.systemui.recent.RecentsVerticalScrollView>
 
-                    <com.android.systemui.recent.CircleMemoryMeter
-                        android:id="@+id/circle_meter"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+	        <FrameLayout
+	             android:layout_width="50dp"
+	             android:layout_height="50dp"
+	            android:layout_marginBottom="2dp"
+	            android:layout_marginLeft="2dp"
+	            android:layout_gravity="bottom|left" >
+
+	            <com.android.systemui.recent.CircleMemoryMeter
+	                android:id="@+id/circle_meter"
+	                android:layout_width="match_parent"
+	                android:layout_height="match_parent" />
  
-                    <ImageView
-                        android:id="@+id/recents_kill_all"
-                        android:clickable="true"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:padding="10dp"
-                        android:scaleType="fitCenter"
-                        android:src="@drawable/ic_recents_clear" />
-                </FrameLayout> 
+	            <ImageView
+	                android:id="@+id/recents_kill_all"
+	                android:clickable="true"
+	                android:layout_width="match_parent"
+	                android:layout_height="match_parent"
+	                android:padding="10dp"
+	                android:scaleType="fitCenter"
+	                android:src="@drawable/ic_recents_clear" />
+	        </FrameLayout> 
 
     </FrameLayout>
 
