--- a/packages/SystemUI/res/layout/status_bar_recent_panel.xml
+++ b/packages/SystemUI/res/layout/status_bar_recent_panel.xml
@@ -26,10 +26,6 @@
     android:layout_width="match_parent"
     systemui:recentItemLayout="@layout/status_bar_recent_item"
     >
-<<<<<<< HEAD
-    <View
-        android:id="@+id/recents_transition_background"
-=======
 
     <View
         android:id="@+id/recents_transition_background"
@@ -41,10 +37,8 @@
         android:id="@+id/recents_bg_protect"
         android:background="@drawable/status_bar_recents_background"
         android:layout_width="match_parent"
->>>>>>> d4f1fe6... Gesture Fix v2
         android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:visibility="invisible" />
+        android:layout_alignParentBottom="true">
 
 	    <FrameLayout
 		android:id="@+id/recents_bg_protect"
