--- a/packages/SystemUI/res/layout/status_bar_recent_panel.xml
+++ b/packages/SystemUI/res/layout/status_bar_recent_panel.xml
@@ -35,41 +35,48 @@
 
     <FrameLayout
         android:id="@+id/recents_bg_protect"
-        android:background="@drawable/status_bar_recents_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentBottom="true">
-
-		<com.android.systemui.recent.RecentsVerticalScrollView
-		    android:id="@+id/recents_container"
-		    android:layout_width="match_parent"
-		    android:layout_height="wrap_content"
-		    android:layout_marginRight="0dp"
-		    android:divider="@null"
-		    android:stackFromBottom="true"
-		    android:fadingEdge="vertical"
-		    android:scrollbars="none"
-		    android:fadingEdgeLength="@dimen/status_bar_recents_scroll_fading_edge_length"
-		    android:layout_gravity="bottom|left"
-		    android:clipToPadding="false"
-		    android:clipChildren="false">
+        android:layout_centerVertical="true">
+        
+        <ImageView
+           android:gravity="center"
+           android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_marginTop="0.0dip"
+          android:src="@drawable/status_bar_recents_background" 
+          />
+        
+        <com.android.systemui.recent.RecentsHorizontalScrollView
+          android:id="@+id/recents_container"
+          android:layout_gravity="bottom|left|center"
+          android:scrollbars="none"
+          android:fadingEdge="none"
+          android:fadingEdgeLength="0.0dip"
+          android:clipChildren="false"
+          android:clipToPadding="false"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginRight="0.0dip"
+          android:stackFromBottom="true"
+          android:divider="@null">
 
 		    <LinearLayout android:id="@+id/recents_linear_layout"
 		        android:layout_width="match_parent"
 		        android:layout_height="wrap_content"
-		        android:orientation="vertical"
+		        android:orientation="horizontal"
 		        android:clipToPadding="false"
 		        android:clipChildren="false">
 		    </LinearLayout>
 
-		</com.android.systemui.recent.RecentsVerticalScrollView>
+        </com.android.systemui.recent.RecentsHorizontalScrollView>
 
 	        <FrameLayout
-	             android:layout_width="50dp"
-	             android:layout_height="50dp"
+	            android:layout_width="50dp"
+	            android:layout_height="50dp"
 	            android:layout_marginBottom="2dp"
 	            android:layout_marginLeft="2dp"
-	            android:layout_gravity="bottom|left" >
+	            android:layout_gravity="bottom|center" >
 
 	            <com.android.systemui.recent.CircleMemoryMeter
 	                android:id="@+id/circle_meter"
@@ -85,6 +92,23 @@
 	                android:scaleType="fitCenter"
 	                android:src="@drawable/ic_recents_clear" />
 	        </FrameLayout> 
+
+        <HorizontalScrollView 
+            android:id="@+id/appView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scrollbars="horizontal"
+            android:layout_gravity="bottom">
+
+        <LinearLayout
+            android:id="@+id/scrollviewin"
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+        </LinearLayout>
+
+        </HorizontalScrollView>
 
     </FrameLayout>
 
