--- a/packages/SystemUI/res/layout/halo_speech.xml
+++ b/packages/SystemUI/res/layout/halo_speech.xml
@@ -26,8 +26,7 @@
                 android:background="@drawable/bubble_r"
                 android:singleLine="false"
                 android:visibility="gone"
-                android:textStyle="bold|italic"
-                android:textColor="#33b5e5"
+                android:textColor="#fff"
                 android:textSize="@dimen/halo_speech_text_size"/>
 
             <TextView
@@ -41,8 +40,7 @@
                 android:background="@drawable/bubble_l"
                 android:singleLine="false"
                 android:visibility="gone"
-                android:textStyle="bold|italic"
-                android:textColor="#33b5e5"
+                android:textColor="#fff"
                 android:textSize="@dimen/halo_speech_text_size"/>
 
         </RelativeLayout>
