--- a/core/res/res/values/themes.xml
+++ b/core/res/res/values/themes.xml
@@ -215,6 +215,15 @@ please see themes_device_defaults.xml.
 
         <item name="panelMenuIsCompact">false</item>
         <item name="panelMenuListWidth">296dip</item>
+        
+        <!-- Scrollbar attributes -->
+        <item name="scrollbarFadeDuration">250</item>
+        <item name="scrollbarDefaultDelayBeforeFade">300</item> 
+        <item name="scrollbarSize">10dip</item>
+        <item name="scrollbarThumbHorizontal">@android:drawable/scrollbar_handle_horizontal</item>
+        <item name="scrollbarThumbVertical">@android:drawable/scrollbar_handle_vertical</item>
+        <item name="scrollbarTrackHorizontal">@null</item>
+        <item name="scrollbarTrackVertical">@null</item>
 
         <!-- Text selection handle attributes -->
         <item name="textSelectHandleLeft">@android:drawable/text_select_handle_left</item>
