--- a/packages/SystemUI/res/layout/system_bar.xml
+++ b/packages/SystemUI/res/layout/system_bar.xml
@@ -18,6 +18,7 @@
 <!-- TabletStatusBarView extends FrameLayout -->
 <com.android.systemui.statusbar.tablet.TabletStatusBarView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui"
     android:background="@drawable/system_bar_background"
     android:layout_height="@*android:dimen/system_bar_height"
     >
