--- a/packages/SystemUI/res/values/dimens.xml
+++ b/packages/SystemUI/res/values/dimens.xml
@@ -311,15 +311,15 @@
     <!-- Constant for hidden ribbon drag handle -->
     <dimen name="ribbon_drag_handle_height">25dp</dimen>
 
-    <!-- PA HALO -->
+    <!-- HALO -->
     <dimen name="halo_bubble_size">75dp</dimen>
     <dimen name="halo_number_size">24dp</dimen>
     <dimen name="halo_number_icon_size">16dp</dimen>
     <dimen name="halo_number_text_size">14sp</dimen>
-    <dimen name="halo_speech_text_size">14sp</dimen>
-    <dimen name="halo_speech_hpadding_short">10dp</dimen>
-    <dimen name="halo_speech_hpadding_wide">18dp</dimen>
-    <dimen name="halo_speech_vpadding_top">7dp</dimen>
-    <dimen name="halo_speech_vpadding_bottom">7dp</dimen>
-    <dimen name="halo_content_max_width">250dp</dimen>
+    <dimen name="halo_speech_text_size">15sp</dimen>
+    <dimen name="halo_speech_hpadding_short">16sp</dimen>
+    <dimen name="halo_speech_hpadding_wide">24dp</dimen>
+    <dimen name="halo_speech_vpadding_top">10dp</dimen>
+    <dimen name="halo_speech_vpadding_bottom">10dp</dimen>
+    <dimen name="halo_content_max_width">250dp</dimen> 
 </resources>
