--- a/packages/SystemUI/res/layout/system_bar_notification_panel.xml
+++ b/packages/SystemUI/res/layout/system_bar_notification_panel.xml
@@ -27,7 +27,7 @@
     <!-- lift the panel up off the status bar while leaving a touchable are -->
     <Space
         android:id="@+id/system_bar_notification_panel_bottom_space"
-        android:layout_height="56dp"
+        android:layout_height="32dp"
         android:layout_width="478dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
@@ -37,57 +37,40 @@
         android:id="@+id/content_frame"
         android:background="@drawable/notification_panel_bg"
         android:layout_height="wrap_content"
-        android:layout_width="@dimen/notification_panel_width"
+        android:layout_width="478dp"
         android:orientation="vertical"
         android:layout_alignParentEnd="true"
         android:layout_above="@id/system_bar_notification_panel_bottom_space"
-        android:paddingBottom="@dimen/panel_float"
+        android:paddingBottom="8dp"
         >
 
         <include layout="@layout/system_bar_notification_panel_title"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/notification_panel_title_height"
+            android:layout_height="110dp"
             android:layout_above="@id/content_frame"
             android:layout_alignParentEnd="true"
             android:layout_weight="0"
             />
 
-        <LinearLayout
-            android:id="@+id/quick_toggles"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:visibility="gone" 
-            />
+        <ScrollView
 
-        <FrameLayout
-            android:layout_width="match_parent"
+            android:id="@+id/notification_scroller"
             android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:overScrollMode="ifContentScrolls"
+            android:layout_weight="1"
+            android:paddingBottom="6dp"
             >
-            <ViewStub android:id="@+id/flip_settings_stub"
-                android:layout="@layout/flip_settings"
+            <com.android.systemui.statusbar.policy.NotificationRowLayout
+                android:id="@+id/content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center_horizontal|bottom"
+                android:clickable="true"
+                android:focusable="true"
+                android:descendantFocusability="afterDescendants"
+                systemui:rowHeight="@dimen/notification_row_min_height"
                 />
-
-            <ScrollView
-                android:id="@+id/notification_scroller"
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:overScrollMode="ifContentScrolls"
-                android:layout_weight="1"
-                >
-                <com.android.systemui.statusbar.policy.NotificationRowLayout
-                    android:id="@+id/content"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal|bottom"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:descendantFocusability="afterDescendants"
-                    systemui:rowHeight="@dimen/notification_row_min_height"
-                />
-            </ScrollView>
-        </FrameLayout>
+        </ScrollView>
     </LinearLayout>
 </com.android.systemui.statusbar.tablet.NotificationPanel>
