Recents: allow apps to be excluded from removing all apps
Long pressing a recents entry allows to exclude an app from
being killed when pressing the remove all button.

Manually swiping away will still be possible.

Change-Id: Ic6105dc0208a21f587186e3a173cdd78b3c6ef34
Signed-off-by: Dirk Rettschlag <dirk.rettschlag@gmail.com>

Conflicts:
	packages/SystemUI/res/menu/recent_popup_menu.xml
	packages/SystemUI/res/values/revolt_strings.xml
	packages/SystemUI/src/com/android/systemui/recent/RecentsPanelView.java

--- a/packages/SystemUI/res/values/revolt_strings.xml
+++ b/packages/SystemUI/res/values/revolt_strings.xml
@@ -106,4 +106,7 @@
     <!-- Title shown in recents popup for showing app in floating mode -->
     <string name="status_bar_recent_floating_item_title">Floating mode</string>
 
+    <!-- Recents menu -->
+    <string name="status_bar_recent_lock_item_title">Lock app in list</string>
+
 </resources>
